Modified the CSS to avoid flickering when the list is rendered for the first time.

--- a/riot/src/org/riotfamily/riot/runtime/resources/style/list.css
+++ b/riot/src/org/riotfamily/riot/runtime/resources/style/list.css
@@ -14,6 +14,11 @@
 	margin: 10px 0 0 0;
 }
 
+div#list {
+	width: 100%;
+	height: 100px;
+}
+
 table {
 	width: 100%;
 	margin-right: 300px;
